proj1/tests/error/class_in_for.py
x = [1,2,3,4,5]
for a in x:
    def b():
        print 'what'
    b()

